vpc-cft-protea.yml
#ProjectNam e and Env are used to create the name of the resources.
#CIDRforVPC is used to create the VPC CIDR Block.
#CIDRPublicsubnet1a, CIDRPublicsubnet1b, CIDRPrivatesubnet1a, CIDRPrivatesubnet1b, CIDRDB1a, CIDRDB1b are used to create the subnets.
#AZsubnet1a and AZsubnet1b are used to create the subnets in the specified availability zones.
#If you want to create the subnets, provide the CIDR values for the subnets.
#If you don't want to create the subnets, leave the CIDR values empty.
#IGW is routed to the public subnets.
#NAT is routed to the private subnets.
#DB subnets are associated to the private subnets.
#test
AWSTemplateFormatVersion: '2010-09-09'
Description: NETWORK STACK with 2 - Pub/Private Subnets and 2 - DB Subnets in 2 AZs with NAT & IGW and all Routs.
Parameters:
  ProjectName:
    Description: 'The name of the project'
    Type: String
    Default: ""
  Env:
    Description: The environment for the project
    Type: String
    Default: ""
  CIDRforVPC:
    Description: ' The IP address range can be used for subnets'
    Type: String
    ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x.
  CIDRPublicsubnet1a:
    Description: ' The IP address range can be used for subnets'
    Type: String
    ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x.
  CIDRPublicsubnet1b:
    Description: ' The IP address range can be used for subnets'
    Type: String
    ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x.
  CIDRPrivatesubnet1a:
    Description: ' The IP address range can be used for subnets'
    Type: String
    ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x.
  CIDRPrivatesubnet1b:
    Description: ' The IP address range can be used for subnets'
    Type: String
    ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x.
  CIDRDB1a:
    Description: ' The IP address range can be used for subnets'
    Type: String
    ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x.
  CIDRDB1b:
    Description: ' The IP address range can be used for subnets'
    Type: String
    ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x.
  AZsubnet1a:
    Description: The availability zones for subnet1
    Type: String
    ConstraintDescription: Must Provide a valid AvailabilityZone.
    Default: "ap-south-1a"
  AZsubnet1b:
    Description: The availability zones for subnet2
    Type: String
    ConstraintDescription: Must Provide a valid AvailabilityZone.
    Default: "ap-south-1b"
Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock:
        Ref: CIDRforVPC
      EnableDnsSupport: 'true'
      EnableDnsHostnames: 'true'
      Tags:
      - Key: Created_By
        Value:  Crayon
      - Key: Name
        Value: !Sub "${ProjectName}-${Env}-VPC"
  PublicSubnet1a:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: VPC
      AvailabilityZone:
        Ref: AZsubnet1a
      CidrBlock:
        Ref: CIDRPublicsubnet1a
      Tags:
      - Key: Created_By
        Value: Crayon
      - Key: Name
        Value: !Sub "${ProjectName}-${Env}-Public-Subnet-1a"
    Condition: CreatePublicSubnet1a
  PrivateSubnet1a:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: VPC
      AvailabilityZone:
        Ref: AZsubnet1a
      CidrBlock:
        Ref: CIDRPrivatesubnet1a
      Tags:
      - Key: Created_By
        Value: Crayon
      - Key: Name
        Value: !Sub "${ProjectName}-${Env}-Private-Subnet-1a"
    Condition: CreatePrivateSubnet1a
  PublicSubnet1b:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: VPC
      AvailabilityZone:
        Ref: AZsubnet1b
      CidrBlock:
        Ref: CIDRPublicsubnet1b
      Tags:
      - Key: Created_By
        Value: Crayon
      - Key: Name
        Value: !Sub "${ProjectName}-${Env}-Public-Subnet-1b"
    Condition: CreatePublicSubnet1b
  PrivateSubnet1b:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: VPC
      AvailabilityZone:
        Ref: AZsubnet1b
      CidrBlock:
        Ref: CIDRPrivatesubnet1b
      Tags:
      - Key: Created_By
        Value: Crayon
      - Key: Name
        Value: !Sub "${ProjectName}-${Env}-Private-Subnet-1b"
    Condition: CreatePrivateSubnet1b
  DBSubnet1a:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: VPC
      AvailabilityZone:
        Ref: AZsubnet1a
      CidrBlock:
        Ref: CIDRDB1a
      Tags:
      - Key: Created_By
        Value: Crayon
      - Key: Name
        Value: !Sub "${ProjectName}-${Env}-DB-Subnet-1a"
    Condition: CreateDBSubnet1a
  DBSubnet1b:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: VPC
      AvailabilityZone:
        Ref: AZsubnet1b
      CidrBlock:
        Ref: CIDRDB1b
      Tags:
      - Key: Created_By
        Value: Crayon
      - Key: Name
        Value: !Sub "${ProjectName}-${Env}-DB-Subnet-1b"
    Condition: CreateDBSubnet1b
  IGW:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
      - Key: Created_By
        Value: Crayon
      - Key: Name
        Value: !Sub "${ProjectName}-${Env}-IGW"
  NAT:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId:
        Fn::GetAtt: EIP.AllocationId
      SubnetId:
        Ref: PublicSubnet1a
      Tags:
      - Key: Name
        Value: !Sub "${ProjectName}-${Env}-NAT"
  EIP:
    DependsOn: AttachGateway
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: VPC
      InternetGatewayId:
        Ref: IGW
  PublicRT:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: VPC
      Tags:
      - Key: Created_By
        Value: Crayon
      - Key: Name
        Value: !Sub  "${ProjectName}-${Env}-Public-RT"
  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: AttachGateway
    Properties:
      RouteTableId:
        Ref: PublicRT
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: IGW
  PBSubnetRouteTableAssociation1a:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Condition: CreatePublicSubnet1a
    Properties:
      SubnetId:
        Ref: PublicSubnet1a
      RouteTableId:
        Ref: PublicRT
  PBSubnetRouteTableAssociation1b:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Condition: CreatePublicSubnet1b
    Properties:
      SubnetId:
        Ref: PublicSubnet1b
      RouteTableId:
        Ref: PublicRT
  PrivateRT:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: VPC
      Tags:
      - Key: Created_By
        Value: Crayon
      - Key: Name
        Value: !Sub "${ProjectName}-${Env}-Private-RT"
  PrivateRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: PrivateRT
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: NAT
  PvtSubnetRouteTableAssociation1a:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Condition: CreatePrivateSubnet1a
    Properties:
      SubnetId:
        Ref: PrivateSubnet1a
      RouteTableId:
        Ref: PrivateRT
  PvtSubnetRouteTableAssociation1b:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Condition: CreatePrivateSubnet1b
    Properties:
      SubnetId:
        Ref: PrivateSubnet1b
      RouteTableId:
        Ref: PrivateRT
  DBSubnetRouteTableAssociation1a:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Condition: CreateDBSubnet1a
    Properties:
      SubnetId:
        Ref: DBSubnet1a
      RouteTableId:
        Ref: PrivateRT
  DBSubnetRouteTableAssociation1b:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Condition: CreateDBSubnet1b
    Properties:
      SubnetId:
        Ref: DBSubnet1b
      RouteTableId:
        Ref: PrivateRT
  S3GatewayEndpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      VpcEndpointType: Gateway
      VpcId: !Ref VPC
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.s3'
      # PolicyDocument:
      #   Version: 2012-10-17
      #   Statement:
      #     - Sid: ReadOnlyAccessToDemoBucket
      #       Effect: Allow
      #       Principal: '*'
      #       Action:
      #         - s3:GetObject
      #         - s3:ListBucket
      #       Resource:
      #         - arn:aws:s3:::amzn-s3-demo-bucket
      #         - arn:aws:s3:::amzn-s3-demo-bucket/*
      RouteTableIds:
        - !Ref PublicRT
        - !Ref PrivateRT
Conditions:
  CreatePublicSubnet1a:
    Fn::Not:
    - Fn::Equals:
      - Ref: CIDRPublicsubnet1a
      - ''
  CreatePrivateSubnet1a:
    Fn::Not:
    - Fn::Equals:
      - Ref: CIDRPrivatesubnet1a
      - ''
  CreatePublicSubnet1b:
    Fn::Not:
    - Fn::Equals:
      - Ref: CIDRPublicsubnet1b
      - ''
  CreatePrivateSubnet1b:
    Fn::Not:
    - Fn::Equals:
      - Ref: CIDRPrivatesubnet1b
      - ''
  CreateDBSubnet1a:
    Fn::Not:
    - Fn::Equals:
      - Ref: CIDRDB1a
      - ''
  CreateDBSubnet1b:
    Fn::Not:
    - Fn::Equals:
      - Ref: CIDRDB1b
      - ''
